<resources>
    <string name="app_name">CoverOpsPainters</string>
    <string name="title_activity_g_maps_marker">Map</string>
    <!-- ... -->
    <string name="facebook_application_id" translatable="false">191469795489211</string>
    <!-- Facebook Application ID, prefixed by 'fb'. Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fbAPP_ID</string>
    <string name="sign_in">Sign-In</string>
    <string name="current">Current</string>
    <string name="title_activity_navigation_bar">NavigationBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="past_button">Past</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="google_maps_button">Google Maps</string>
    <string name="create_event_button">Create Event</string>
    <string name="date_label">Date</string>
    <string name="time_label">Time</string>
    <string name="event_description_label">Location Description</string>
    <string name="street">Street:</string>
    <string name="city">City:</string>
    <string name="postCode">Postal Code:</string>
    <string name="timeSet">Set Time</string>
    <string name="dateSet">Set Date</string>
    <string name="profile_menu">Profile</string>
    <string name="logout_menu">Logout</string>
    <string name="coveropspainters">Cover-Ops-Painters</string>
    <string name="current_list">Current List</string>
    <string name="googlemaps_menu">googlemaps_menu</string>
    <string name="google_maps">Google Maps</string>
    <string name="registeration">Click on Data to get Registered!</string>
</resources>
