<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@color/com_facebook_blue"
        android:layout_marginTop="0dp"
        app:navigationIcon="@drawable/com_facebook_send_button_icon"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current" />

    <Button
        android:id="@+id/gmaps_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/google_maps_button" />
</LinearLayout>